build_out7_utf8.log
Processing view_rp2350b (platform: https://github.com/maxgerhardt/platform-raspberrypi.git; board: rpipico2; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/raspberrypi/rpipico2.html
PLATFORM: Raspberry Pi RP2040 (1.19.0+sha.79ce473) > Pico 2
HARDWARE: RP2350 150MHz, 512KB RAM, 4MB Flash
DEBUG: Current (blackmagic) External (blackmagic, cmsis-dap, jlink, picoprobe, raspberrypi-swd)
PACKAGES: 
 - framework-arduinopico @ 1.50501.0+sha.275e73d 
 - tool-picotool-rp2040-earlephilhower @ 5.140200.250530 (14.2.0) 
 - tool-pioasm-rp2040-earlephilhower @ 5.140200.250530 (14.2.0) 
 - toolchain-rp2040-earlephilhower @ 5.140200.250530 (14.2.0)
Flash size: 4.00MB
Sketch size: 4.00MB
Filesystem size: 0.00MB
PSRAM size: 0.00MB
Maximium Sketch size: 4190208 EEPROM start: 0x103ff000 Filesystem start: 0x103ff000 Filesystem end: 0x103ff000
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
[nanopb] Installing Protocol Buffers dependencies
Requirement already satisfied: protobuf>=3.19.1 in C:\Users\cocou\.platformio\penv\Lib\site-packages (6.33.6)
[nanopb] No generation needed.
Found 82 compatible libraries
Scanning dependencies...
Dependency Graph
|-- AceButton @ 1.9.1
|-- PacketSerial @ 1.4.0
|-- Nanopb @ 0.4.7
|-- Simple FOC @ 2.2.0
|-- TFT_eSPI @ 2.4.25
|-- HX711 @ 0.7.5
|-- Adafruit VEML7700 Library @ 1.1.1
|-- LittleFS @ 0.1.0
Building in release mode
Compiling .pio\build\view_rp2350b\src\configuration.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\current_sense\hardware_specific\stm32g4_hal.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\current_sense\hardware_specific\stm32g4_mcu.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\current_sense\hardware_specific\teensy_mcu.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\drivers\BLDCDriver3PWM.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\drivers\BLDCDriver6PWM.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\drivers\StepperDriver2PWM.cpp.o
Compiling .pio\build\view_rp2350b\liba6b\Simple FOC\drivers\StepperDriver4PWM.cpp.o
C:\Users\cocou\.platformio\penv\Scripts\pio.exe : 
firmware_rp2350b\src\configuration.cpp: In member 
function 'bool Configuration::loadFromDisk()':
At line:1 char:1
+ C:\Users\cocou\.platformio\penv\Scripts\pio.exe run -c 
platformio_rp2 ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (firmware_rp 
   2350...oadFromDisk()'::String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
firmware_rp2350b\src\configuration.cpp:25:18: error: 
'bool LittleFSGuard::mounted_' is private within this 
context
   25 |     if (!fsGuard.mounted_) {
      |                  ^~~~~~~~
In file included from 
firmware_rp2350b\src\configuration.cpp:9:
firmware_rp2350b\src\configuration.h:75:14: note: 
declared private here
   75 |         bool mounted_;
      |              ^~~~~~~~
firmware_rp2350b\src\configuration.cpp: In member 
function 'bool Configuration::saveToDisk()':
firmware_rp2350b\src\configuration.cpp:83:18: error: 
'bool LittleFSGuard::mounted_' is private within this 
context
   83 |     if (!fsGuard.mounted_) {
      |                  ^~~~~~~~
firmware_rp2350b\src\configuration.h:75:14: note: 
declared private here
   75 |         bool mounted_;
      |              ^~~~~~~~
*** [.pio\build\view_rp2350b\src\configuration.cpp.o] 
Error 1
========================== [FAILED] Took 4.80 seconds 
==========================
